--- a/src/main.css
+++ b/src/main.css
@@ -54,6 +54,13 @@ body {
     margin-left:10px;
 }
 
+.restaurant-detail {
+    position: fixed;
+    height:400px;
+    border:1px solid red;
+    top:120px;
+}
+
 footer {
     bottom:0;
     left:0;
